@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1/25/12: Made all Qt-based programs reset the locale after starting the
+Qt application to prevent errors reading floating point numbers.
+
 1/25/12: Made Midas able to read files with DOS line endings on other systems.
 
 1/19/12: Fixed problem with trying to do more than 50000 peaks in Findbeads3d.
